# okopilote-controller

./: README.md  pyproject.toml
examples/: controller-example.conf
examples/systemd/: okopilote-controller.service
src/okopilote/controller/: api.py  app.py  controller.py  entry_point.py  room.py
